# Ai-World-Sim

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
ai_world_sim/: __init__.py
ai_world_sim/common/: config.py
ai_world_sim/rl/: env.py  model.py  observations.py  rewards.py  train.py
ai_world_sim/story/: events.py  summaries.py
ai_world_sim/world/: animals.py  entities.py  generator.py  memory.py  sim.py  terrain.py
ai_world_sim/world/systems/: animals.py  ecology.py  health.py  resources.py  seasons.py
benchmarks/: _utils.py  bench_policy.py  bench_rllib.py  bench_sim.py
configs/: train.yaml  world.yaml
docs/: architecture.md  v0-survival-spec.md
experiments/: baseline_report.md  baseline_results.json  baseline_results_light.json  baseline_results_none.json  baseline_results_normal.json  eval_baseline.py
tests/: test_agent.py  test_animals.py  test_env.py  test_home_storage.py  test_memory.py  test_model.py  test_observation_purity.py  test_rewards.py  test_seasons.py  test_sleep.py  test_thirst.py  test_world.py
